--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,10 @@ button:active {
     background-repeat: no-repeat;
     background-size: cover;
     background-position:top top;
+    display: flex;
+    flex-direction: column;
+    /* align-content: space-between; */
+    gap: 50px;
 
 }
 .about-container {
@@ -167,3 +171,108 @@ button:active {
     font-size: 15px;
     
 }
+
+/* Skils */
+.skills-container {
+    width: 80%;
+    height: 50vh;
+    background-color: var(--prime-color);
+    background-image: url(/MyOwnWebsite/assets/imgs/bg3_1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center center;
+    /* border-radius: 20px; */
+    box-shadow: 2px 2px 12px rgba(255, 255, 255, 0.727);
+    margin: -1% auto 20px auto;
+    position: relative;
+    display: flex;
+    gap: 15px;
+
+}
+
+.box-1,.box-2,.box-3,.box-4,.box-5 {
+    width: 300px;
+    height: 220px;
+    background-color: var(--second-color);
+    background-image: url(/MyOwnWebsite/assets/imgs/bg2-r.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:top top;
+    box-shadow: 2px 2px 12px rgba(255, 255, 255, 0.727);
+    /* border-radius: 60%; */
+    padding: 25px;
+}
+
+.skills-container p {
+    font-family: 'Prompt', sans-serif;
+    font-weight: bold;
+    color: var(--prime-text-color);
+    font-size: 45px;
+    text-align: center;
+}
+
+.box-1:hover,.box-2:hover,.box-3:hover,.box-4:hover,.box-5:hover {
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+    transform: rotateX(180deg);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* animation : */
+/* .flip-box {
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+  }
+
+.flip-box-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  .flip-box:hover .flip-box-inner {
+    transform: rotateX(180deg);
+  }
+  
+  .flip-box-front, .flip-box-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .flip-box-front {
+    background-color: #bbb;
+    color: black;
+  }
+  
+  .flip-box-back {
+    background-color: dodgerblue;
+    color: white;
+    transform: rotateX(180deg);
+  } */
